# apps/data/lib/data_web/schema/user.ex
@@ -1,6 +1,8 @@
 defmodule Data.Schema.User do
   use Ecto.Schema
   import Ecto.Changeset
+  @roles ["admin", "user"]
+  @businesses ["service", "product", "tech"]
 
   schema "users" do
     field :name, :string
@@ -17,5 +19,9 @@ defmodule Data.Schema.User do
     user
     |> cast(attrs, [:name, :email, :password, :business, :role])
     |> validate_required([:name, :email, :password, :business, :role])
+    |>unique_constraint(:email,message: "Email must be unique")
+    |>validate_inclusion(:role, @roles,message: "Role should be either user or admin")
+    |>validate_inclusion(:business,@businesses,message: "Businesses should be among product,service or tech")
+
   end
 end
